--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-time-format.v2.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="./sw.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./sw-1.png" sizes="32x32">
     <meta name="theme-color" content="#a69b97" />
     <title>Doping in Professional Bicycle Racing</title>
 </head>
